// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeaderWrapper snapshots default 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      />
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots force drawer 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menu": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__NavigationToggleWrapper
          onClick={[Function]}
        >
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  448,
                  512,
                  Array [],
                  "f0c9",
                  "M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z",
                ],
                "iconName": "bars",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            swapOpacity={false}
            symbol={false}
            title=""
            transform={null}
          />
        </AppHeaderWrapper__NavigationToggleWrapper>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
  <ForwardRef
    drawer={true}
    isOpen={false}
    key=".0"
    onClose={[Function]}
  >
    <span>
      jest@openlattice.com
    </span>
    <hr />
    <a
      href="/tab1"
      key=".$tab1"
      onClick={[Function]}
    >
      Tab1
    </a>
    <a
      href="/tab2"
      key=".$tab2"
      onClick={[Function]}
    >
      Tab2
    </a>
    <AppHeaderWrapper__LogOutAnchor
      onClick={[Function]}
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={true}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f08b",
              "M96 64h84c6.6 0 12 5.4 12 12v24c0 6.6-5.4 12-12 12H96c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h84c6.6 0 12 5.4 12 12v24c0 6.6-5.4 12-12 12H96c-53 0-96-43-96-96V160c0-53 43-96 96-96zm231.1 19.5l-19.6 19.6c-4.8 4.8-4.7 12.5.2 17.1L420.8 230H172c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h248.8L307.7 391.7c-4.8 4.7-4.9 12.4-.2 17.1l19.6 19.6c4.7 4.7 12.3 4.7 17 0l164.4-164c4.7-4.7 4.7-12.3 0-17l-164.4-164c-4.7-4.6-12.3-4.6-17 .1z",
            ],
            "iconName": "sign-out",
            "prefix": "far",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
      <span
        style={
          Object {
            "marginLeft": "20px",
          }
        }
      >
        Log Out
      </span>
    </AppHeaderWrapper__LogOutAnchor>
  </ForwardRef>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots logout 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots navigation 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots navigation wrapping 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
  <ForwardRef>
    <a
      href="/tab1"
      key=".0/.$.$tab1"
    >
      Tab1
    </a>
    <a
      href="/tab2"
      key=".0/.$.$tab2"
    >
      Tab2
    </a>
  </ForwardRef>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots select + navigation 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menu": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots select 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menu": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots user + navigation + select 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <span>
          jest@openlattice.com
        </span>
        <Select
          isClearable={false}
          isMulti={false}
          menuPortalTarget={<body />}
          options={
            Array [
              Object {
                "label": "OpenLattice",
                "value": "org1",
              },
              Object {
                "label": "JustBeamIt",
                "value": "org2",
              },
              Object {
                "label": "Metallica",
                "value": "org3",
              },
            ]
          }
          placeholder="Select an organization..."
          styles={
            Object {
              "clearIndicator": [Function],
              "container": [Function],
              "control": [Function],
              "dropdownIndicator": [Function],
              "indicatorSeparator": [Function],
              "indicatorsContainer": [Function],
              "menu": [Function],
              "menuList": [Function],
              "menuPortal": [Function],
              "option": [Function],
              "singleValue": [Function],
              "valueContainer": [Function],
            }
          }
        />
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots user + navigation 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper
        key=".0"
      >
        <a
          className="app-nav-root"
          href="/home"
          key=".$home"
        >
          <AppIcon />
          <AppTitle
            title="Home"
          />
        </a>
        <a
          href="/tab1"
          key=".$tab1"
        >
          Tab1
        </a>
        <a
          href="/tab2"
          key=".$tab2"
        >
          Tab2
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <span>
          jest@openlattice.com
        </span>
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;

exports[`AppHeaderWrapper snapshots user 1`] = `
<Fragment>
  <AppHeaderOuterWrapper
    onClick={[Function]}
  >
    <AppHeaderInnerWrapper>
      <NavigationWrapper>
        <a
          className="app-nav-root"
          href="http://localhost/"
        >
          <AppIcon />
          <AppTitle />
        </a>
      </NavigationWrapper>
      <AppHeaderWrapper__HeaderSectionContentWrapper
        align="right"
      >
        <span>
          jest@openlattice.com
        </span>
        <AppHeaderWrapper__LogoutButton
          onClick={[Function]}
        >
          Log Out
        </AppHeaderWrapper__LogoutButton>
      </AppHeaderWrapper__HeaderSectionContentWrapper>
    </AppHeaderInnerWrapper>
  </AppHeaderOuterWrapper>
</Fragment>
`;
